--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,35 +5,54 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".FragmentLogin"
     tools:showIn="@layout/activity_login">
 
-    <EditText
-        android:id="@+id/edit_name"
-        android:singleLine="true"
-        android:inputType="text"
-        android:hint="@string/hint_name"
-        android:text="@string/default_login"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="140dp"
+        android:background="@color/colorPrimary"
+        android:padding="@dimen/activity_margin" >
 
-    <EditText
-        android:id="@+id/edit_pass"
-        android:singleLine="true"
-        android:inputType="text"
-        android:hint="@string/hint_pass"
-        android:text="@string/default_pass"
+        <TextView
+            style="@style/headerText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/login_welcome"
+            android:id="@+id/textView"/>
+
+    </FrameLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:padding="@dimen/activity_margin"
+        android:gravity="center_horizontal">
 
-    <Button
-        android:id="@+id/button_login"
-        android:text="@string/button_login_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <EditText
+            android:id="@+id/edit_name"
+            android:singleLine="true"
+            android:inputType="text"
+            android:hint="@string/hint_name"
+            android:text="@string/default_login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <EditText
+            android:id="@+id/edit_pass"
+            android:singleLine="true"
+            android:inputType="text"
+            android:hint="@string/hint_pass"
+            android:text="@string/default_pass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/button_login"
+            android:text="@string/button_login_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
 </LinearLayout>
