--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,18 +1,18 @@
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
 
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FragmentLogin"
     tools:showIn="@layout/activity_login">
 
     <FrameLayout
+        android:id="@+id/login_header"
         android:layout_width="match_parent"
         android:layout_height="140dp"
         android:background="@color/colorPrimary"
-        android:padding="@dimen/activity_margin" >
+        android:padding="@dimen/activity_margin">
 
         <TextView
             style="@style/headerText"
@@ -24,13 +24,18 @@
     </FrameLayout>
 
     <LinearLayout
+        android:layout_below="@+id/login_header"
+        android:layout_above="@+id/main_footer"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:padding="@dimen/activity_margin"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <EditText
+            android:layout_margin="@dimen/activity_small_margin"
             android:id="@+id/edit_name"
             android:singleLine="true"
             android:inputType="text"
@@ -40,6 +45,7 @@
             android:layout_height="wrap_content" />
 
         <EditText
+            android:layout_margin="@dimen/activity_small_margin"
             android:id="@+id/edit_pass"
             android:singleLine="true"
             android:inputType="text"
@@ -49,10 +55,38 @@
             android:layout_height="wrap_content" />
 
         <Button
+            style="@style/button"
             android:id="@+id/button_login"
-            android:text="@string/button_login_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:text="@string/button_login_text" />
     </LinearLayout>
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_margin="@dimen/activity_small_margin"
+        android:id="@+id/login_footer"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/company_logo"
+            android:adjustViewBounds="true"
+            android:maxWidth="@dimen/small_image"
+            android:maxHeight="@dimen/small_image"
+            android:scaleType="fitCenter"
+            android:src="@drawable/logo" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/phone" />
+
+    </LinearLayout>
+
+</RelativeLayout>
