Added loan activity

--- a/app/src/main/res/layout/fragment_loan.xml
+++ b/app/src/main/res/layout/fragment_loan.xml
@@ -2,30 +2,29 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
 
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentMain"
-    tools:showIn="@layout/activity_main">
+    tools:context=".FragmentLoan"
+    tools:showIn="@layout/activity_loan">
 
     <include layout="@layout/header"
-        android:id="@+id/main_header" />
+        android:id="@+id/loan_header" />
+
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/main_header"
-        android:layout_above="@+id/main_footer"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/scrollView" >
+        android:id="@+id/scrollView2"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/loan_footer"
+        android:layout_below="@+id/loan_header" >
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:padding="@dimen/activity_margin">
+            android:padding="@dimen/activity_margin" >
 
             <LinearLayout
                 android:gravity="center"
@@ -39,13 +38,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/current_plan" />
+                    android:text="@string/choose_sum" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:id="@+id/text_plan" />
+                <Button
+                    style="@style/button"
+                    android:text="@string/empty_sum"
+                    android:layout_margin="@dimen/activity_small_margin"
+                    android:id="@+id/button_sum" />
 
             </LinearLayout>
 
@@ -61,29 +60,26 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/charge_rate" />
+                    android:text="@string/expiration_date" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:id="@+id/text_charge" />
+                    android:id="@+id/text_date" />
+
             </LinearLayout>
 
             <Button
                 style="@style/button"
-                android:text="@string/show_last_charges"
-                android:id="@+id/button_charges" />
-
-            <Button
-                style="@style/button"
-                android:text="@string/take_loan"
-                android:id="@+id/button_open_loan" />
+                android:text="@string/get_loan"
+                android:id="@+id/button_loan" />
 
         </LinearLayout>
+
     </ScrollView>
 
     <include layout="@layout/footer"
-        android:id="@+id/main_footer" />
+        android:id="@+id/loan_footer" />
 
 </RelativeLayout>
