--- a/app/src/main/res/layout/activity_loan.xml
+++ b/app/src/main/res/layout/activity_loan.xml
@@ -6,8 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.al.sibirski.ActivityMain">
+    tools:context="com.example.al.sibirski.ActivityLoan">
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/content_loan" />
 
 </android.support.design.widget.CoordinatorLayout>
