--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!--XXX Relative-->
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
 
