--- a/app/src/main/res/layout/loan_options.xml
+++ b/app/src/main/res/layout/loan_options.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!--XXX Linear in linear-->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
 
